--- a/Code/front/ui/widget_profile_ui.ui
+++ b/Code/front/ui/widget_profile_ui.ui
@@ -10,6 +10,18 @@
     <height>80</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>459</width>
+    <height>80</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>459</width>
+    <height>80</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -32,11 +44,14 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QWidget" name="widget" native="true">
+      <widget class="QWidget" name="profile" native="true">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(85, 0, 127);</string>
+       </property>
        <widget class="QLabel" name="profile_name_label">
         <property name="geometry">
          <rect>
-          <x>100</x>
+          <x>50</x>
           <y>20</y>
           <width>161</width>
           <height>41</height>
