--- a/Code/front/ui/page_friend_list_ui.ui
+++ b/Code/front/ui/page_friend_list_ui.ui
@@ -139,7 +139,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QFrame" name="frame_7">
+       <widget class="QFrame" name="friend_page_search_bar_1">
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
@@ -177,7 +177,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="friend_page_search_bar" native="true">
+       <widget class="QFrame" name="friend_page_search_bar_2">
         <layout class="QHBoxLayout" name="horizontalLayout_6">
          <property name="leftMargin">
           <number>0</number>
@@ -337,7 +337,7 @@
                    <number>0</number>
                   </property>
                   <item>
-                   <widget class="QWidget" name="widget_2" native="true">
+                   <widget class="QWidget" name="friend_list_layout_widget" native="true">
                     <layout class="QVBoxLayout" name="friend_list_layout">
                      <property name="leftMargin">
                       <number>0</number>
@@ -355,7 +355,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QWidget" name="friend_list_layout_widget" native="true">
+                   <widget class="QWidget" name="widget" native="true">
                     <layout class="QVBoxLayout" name="verticalLayout_5">
                      <item>
                       <spacer name="verticalSpacer">
