--- a/Code/front/ui/profile_page_ui.ui
+++ b/Code/front/ui/profile_page_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>414</width>
-    <height>292</height>
+    <width>284</width>
+    <height>196</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,8 +36,8 @@
        <widget class="QLabel" name="nick_name_label">
         <property name="geometry">
          <rect>
-          <x>140</x>
-          <y>80</y>
+          <x>80</x>
+          <y>30</y>
           <width>111</width>
           <height>61</height>
          </rect>
@@ -53,6 +53,18 @@
      </item>
      <item>
       <widget class="QWidget" name="widget_2" native="true">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>40</height>
+        </size>
+       </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QPushButton" name="one_on_one_chatting_btn">
