--- a/Code/network/server_ui/prototype_chat_room.ui
+++ b/Code/network/server_ui/prototype_chat_room.ui
@@ -197,11 +197,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="line_edit_for_login_pw">
-           <property name="echoMode">
-            <enum>QLineEdit::Password</enum>
-           </property>
-          </widget>
+          <widget class="QLineEdit" name="line_edit_for_login_pw"/>
          </item>
          <item>
           <widget class="QPushButton" name="btn_login">
