--- a/Code/front/ui/page_friend_list_ui.ui
+++ b/Code/front/ui/page_friend_list_ui.ui
@@ -10,6 +10,18 @@
     <height>850</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>600</width>
+    <height>850</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>600</width>
+    <height>850</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -317,7 +329,7 @@
                    <x>0</x>
                    <y>0</y>
                    <width>460</width>
-                   <height>683</height>
+                   <height>681</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="la1">
